# workshop-parallel-jupyter

./: .gitignore  .mailmap  1_Start.ipynb  2_Fundamentals.ipynb  2_Grundlagen.ipynb  3_Numpy.ipynb  4_1_Pandas_Titanic.ipynb  4_Pandas.ipynb  5_Machine_Learning.ipynb  6_Dask.ipynb  7_Miniconda.ipynb  README.md  dask-cluster.ipynb  labextension.yaml  pyproject.toml  python_workshop_env.yml
.github/workflows/: test-environment.yml
files/: test.csv  titanic.csv
images/: Dask_Scale.drawio  Python_Variables.drawio  ml_pathway.drawio
scripts/: test_environment.py
