[project]
name = "1761731486678-8220ea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "bokeh>=2.4.0",
    "bottleneck>=1.3.0",
    "dask>=2021.10.0",
    "dask-jobqueue>=0.8.5",
    "dask-ml>=2024.4.4",
    "distributed>=2021.10.0",
    "graphviz>=0.16.0",
    "ipykernel>=6.4.0",
    "ipython>=7.29.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.4.0",
    "mpi4py>=3.0.0",
    "numba>=0.53.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyarrow>=4.0.0",
    "s3fs>=2021.7.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
]

[dependency-groups]
dev = ["nbconvert>=7.16.6", "pytest>=8.3.5", "pytest-html>=4.1.1"]
